--- a/Browser Folder/TingShuo1.1/zzz.html
+++ b/Browser Folder/TingShuo1.1/zzz.html
@@ -16,19 +16,9 @@
 </head>
 
 <body>
-    <button id="a" onclick="a()">click</button>
-    <p id="b" onclick="b()">aaaa</p>
-
     <script type="text/javascript">
-        function a() {
-            var a = document.getElementById(a);
-            var b=document.getElementById("b");
-            b.className='a';
-        }
-        function b() {
-            var b=document.getElementById("b");
-            alert(b);
-        }
+        let id ="jack";
+       location.href="./yyy.html?id="+id;
     </script>
 </body>
 
